[metadata]
name = adobeio
version = 0.0.1
author = Lou Kratz
author-email = inbound at lou.dev
home-page = https://github.com/lou-k/adobe-io-auth
description = "An implementation of Adobe's IMS API and example server."
license = GPLv3
license-file = LICENSE
platform = any
keywords = adobe oauth
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Documentation = https://github.com/lou-k/adobe-io-auth/blob/main/README.md
    Bug Tracker = https://github.com/lou-k/adobe-io-auth/issues
    Changelog = https://github.com/lou-k/adobe-io-auth/commits/main


[options]
packages = adobeio
include_package_data = True
install_requires =
    requests>=2.22.0
    Flask>=1.1.2

[options.entry_points]
console_scripts =
    adobe-io-server = adobeio:server.main
    adobe-io-refresh-token = adobeio:refresh_token.main